// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-bg-cells renders default 1`] = `
<ld-bg-cells class="ld-bg-cells ld-bg-cells--hexagon">
  <mock:shadow-root>
    <div class="ld-bg-cells__layer" part="layer" style="--ld-bg-cells-image: url(/assets/hexagon-cell.svg);"></div>
    <div class="ld-bg-cells__secondary-layer" part="secondary-layer" style="--ld-bg-cells-image: url(/assets/hexagon-cell.svg);"></div>
  </mock:shadow-root>
</ld-bg-cells>
`;

exports[`ld-bg-cells renders with alias type 1`] = `
<ld-bg-cells class="ld-bg-cells ld-bg-cells--supelco" type="qa-x2f-qc">
  <mock:shadow-root>
    <div class="ld-bg-cells__layer" part="layer" style="--ld-bg-cells-image: url(/assets/supelco-cell.svg);"></div>
    <div class="ld-bg-cells__secondary-layer" part="secondary-layer" style="--ld-bg-cells-image: url(/assets/supelco-cell.svg);"></div>
  </mock:shadow-root>
</ld-bg-cells>
`;

exports[`ld-bg-cells renders with explicit type 1`] = `
<ld-bg-cells class="ld-bg-cells ld-bg-cells--millipore" type="millipore">
  <mock:shadow-root>
    <div class="ld-bg-cells__layer" part="layer" style="--ld-bg-cells-image: url(/assets/millipore-cell.svg);"></div>
    <div class="ld-bg-cells__secondary-layer" part="secondary-layer" style="--ld-bg-cells-image: url(/assets/millipore-cell.svg);"></div>
  </mock:shadow-root>
</ld-bg-cells>
`;

exports[`ld-bg-cells renders with three layers 1`] = `
<ld-bg-cells class="ld-bg-cells ld-bg-cells--hexagon ld-bg-cells--three-layers" three-layers="">
  <mock:shadow-root>
    <div class="ld-bg-cells__layer" part="layer" style="--ld-bg-cells-image: url(/assets/hexagon-cell.svg);"></div>
    <div class="ld-bg-cells__secondary-layer" part="secondary-layer" style="--ld-bg-cells-image: url(/assets/hexagon-cell.svg);"></div>
  </mock:shadow-root>
</ld-bg-cells>
`;
